test/libsolidity/syntaxTests/parsing/location_specifiers_for_state_variables.sol
contract Foo {
	uint[] memory x;
}
// ----
// ParserError: (23-23): Expected token Identifier got 'Memory'
